{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 365,
  "lineage": "57969515-5ddf-2306-5a0c-3ec009e8df2f",
  "resources": [
    {
      "module": "module.genpact-poc-bastion_host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-02b1fc98fbcc36958",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b1fc98fbcc36958",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04e5a03d25ba0e814",
            "private_dns": "ip-192-168-0-5.ec2.internal",
            "private_ip": "192.168.0.5",
            "public_ip": "54.86.214.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f311e209e1d46453",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e264a8617c2f0eb1",
            "tags": {
              "Name": "PoC-BastionHost"
            },
            "tags_all": {
              "Name": "PoC-BastionHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0436932ad1db452d8",
              "sg-06d1468849eaf27c1"
            ]
          },
          "dependencies": [
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-ec2-App-Server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-0ea6cab2d96602b75",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea6cab2d96602b75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ae102dd61096c0ca",
            "private_dns": "ip-192-168-0-30.ec2.internal",
            "private_ip": "192.168.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0397c7f47ed4fbbab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d79140f3d0c6e7d",
            "tags": {
              "Name": "PoC-AppServer"
            },
            "tags_all": {
              "Name": "PoC-AppServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d1468849eaf27c1"
            ]
          },
          "dependencies": [
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-ec2-WebSerer",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:484010831236:instance/i-0fbbae4956cd8d980",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fbbae4956cd8d980",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Usnv-anshul",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e593222c380a9dad",
            "private_dns": "ip-192-168-0-26.ec2.internal",
            "private_ip": "192.168.0.26",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0543a071843adf9c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d79140f3d0c6e7d",
            "tags": {
              "Name": "PoC-WebSerer"
            },
            "tags_all": {
              "Name": "PoC-WebSerer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d1468849eaf27c1",
              "sg-0a1b101cdbfca086a"
            ]
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc",
            "module.genpact-poc-sg.aws_security_group.PoC-Bastion_Host_SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Internal-SG",
            "module.genpact-poc-sg.aws_security_group.PoC-Web_Server_SG"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Bastion_Host_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-0436932ad1db452d8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0436932ad1db452d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow bastion Host to ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210907052105199500000002",
            "name_prefix": "terraform-",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Internal-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-06d1468849eaf27c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d1468849eaf27c1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SG for InterCommunication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "terraform-20210907052105198900000001",
            "name_prefix": "terraform-",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "PoC-Web_Server_SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:security-group/sg-0a1b101cdbfca086a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "test",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1b101cdbfca086a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Rule for WebSerer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210907052105199500000003",
            "name_prefix": "terraform-",
            "owner_id": "484010831236",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:internet-gateway/igw-0c005ee25c5c0d146",
            "id": "igw-0c005ee25c5c0d146",
            "owner_id": "484010831236",
            "tags": {
              "Name": "myigw"
            },
            "tags_all": {
              "Name": "myigw"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-06e5e5ada526dd810",
            "network_interface_id": "eni-0420dbdd280466761",
            "private_ip": "192.168.0.7",
            "subnet_id": "subnet-0e264a8617c2f0eb1",
            "tags": {
              "Name": "mynet"
            },
            "tags_all": {
              "Name": "mynet"
            }
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Privaterouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:route-table/rtb-02e444295b9540afe",
            "id": "rtb-02e444295b9540afe",
            "owner_id": "484010831236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06e5e5ada526dd810",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Privaterouter"
            },
            "tags_all": {
              "Name": "Privaterouter"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_nat_gateway.mynet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicrouter",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:route-table/rtb-05ed9bfb403367b3a",
            "id": "rtb-05ed9bfb403367b3a",
            "owner_id": "484010831236",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c005ee25c5c0d146",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_Router_Table"
            },
            "tags_all": {
              "Name": "Public_Router_Table"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc",
            "module.genpact-poc-vpc.aws_internet_gateway.myigw"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052689387466f38c7",
            "route_table_id": "rtb-05ed9bfb403367b3a",
            "subnet_id": "subnet-0e264a8617c2f0eb1"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_internet_gateway.myigw",
            "module.genpact-poc-vpc.aws_route_table.Publicrouter",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b384b991fb7dbc1",
            "route_table_id": "rtb-02e444295b9540afe",
            "subnet_id": "subnet-00d79140f3d0c6e7d"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_nat_gateway.mynet",
            "module.genpact-poc-vpc.aws_route_table.Privaterouter",
            "module.genpact-poc-vpc.aws_subnet.private_Subnet",
            "module.genpact-poc-vpc.aws_subnet.public_Subnet",
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-00d79140f3d0c6e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.16/28",
            "id": "subnet-00d79140f3d0c6e7d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "privateSubnet"
            },
            "tags_all": {
              "Name": "privateSubnet"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-0f291795198f019c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.48/28",
            "id": "subnet-0f291795198f019c3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "privateSubnet1"
            },
            "tags_all": {
              "Name": "privateSubnet1"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-0e264a8617c2f0eb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/28",
            "id": "subnet-0e264a8617c2f0eb1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484010831236",
            "tags": {
              "Name": "publicSubnet"
            },
            "tags_all": {
              "Name": "publicSubnet"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:subnet/subnet-0c81a94330e4b0981",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.32/28",
            "id": "subnet-0c81a94330e4b0981",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484010831236",
            "tags": {
              "Name": "publicSubnet1"
            },
            "tags_all": {
              "Name": "publicSubnet1"
            },
            "vpc_id": "vpc-0bafc8a13224ea965"
          },
          "dependencies": [
            "module.genpact-poc-vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.genpact-poc-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484010831236:vpc/vpc-0bafc8a13224ea965",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/26",
            "default_network_acl_id": "acl-0cfd213980cf6af21",
            "default_route_table_id": "rtb-0fcdbc6adc276eea7",
            "default_security_group_id": "sg-0f2e9515c98a2d9e5",
            "dhcp_options_id": "dopt-58d0ff22",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bafc8a13224ea965",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fcdbc6adc276eea7",
            "owner_id": "484010831236",
            "tags": {
              "Name": "mypocvpc"
            },
            "tags_all": {
              "Name": "mypocvpc"
            }
          }
        }
      ]
    }
  ]
}